--- a/static/styles.css
+++ b/static/styles.css
@@ -1,81 +1,6 @@
-/* Box sizing rules */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+/* CUBE */
 
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"] {
-  list-style: none;
-}
-
-/* Set core root defaults */
-html:focus-within {
-  scroll-behavior: smooth;
-}
-
-/* Set core body defaults */
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
-
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
-
-* {
-  max-width: 60ch;
-}
+/* Global */
 html,
 body,
 header {
@@ -102,17 +27,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#root > * + * {
-  margin-top: 1rem;
-}
-
 form {
   border: 1px solid black;
   padding: 1rem;
-}
-
-form > * + * {
-  margin-top: 1rem;
 }
 
 fieldset {
@@ -121,34 +38,35 @@ fieldset {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-fieldset > * + * {
-  margin-left: 1rem;
-}
 
-input {
-  min-width: 50%;
+fieldset > input {
+  min-width: 70%;
 }
 input + ul {
   color: red;
+  font-weight: bold;
+  min-width: 100%;
+}
+form > input {
+  width: 100%;
+  padding: 10px;
 }
 
 section {
   border: 1px solid black;
   padding: 1rem;
-}
-section > * + * {
-  margin-top: 1rem;
+  max-width: 70ch;
 }
 
 th {
-  padding: 1rem;
+  padding: 5px;
 }
 
-tr > * {
-  border: 1px solid black;
+td {
   text-align: center;
 }
 
+/* Composition */
 .stack {
   display: flex;
   flex-direction: column;
@@ -160,3 +78,45 @@ tr > * {
 .stack > * + * {
   margin-top: 1.5rem;
 }
+
+#root > * + * {
+  margin-top: 1rem;
+}
+
+section > * + * {
+  margin-top: 1rem;
+}
+
+form > * + * {
+  margin-top: 1rem;
+}
+
+fieldset > * + * {
+  margin-left: 1rem;
+}
+
+/* Utility */
+
+/* Block */
+.dialog-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.dialog-container {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translateX(-50%) translateY(-50%);
+  min-width: 60ch;
+  box-shadow: 0 19px 38px rgb(0 0 0 / 12%), 0 15px 12px rgb(0 0 0 / 22%);
+  padding: 1rem;
+  border: 1px solid black;
+  background-color: #fff;
+}
+
+/* Exception */
