--- a/static/styles.css
+++ b/static/styles.css
@@ -40,7 +40,7 @@ fieldset {
 }
 
 fieldset > input {
-  min-width: 70%;
+  min-width: 60%;
 }
 input + ul {
   color: red;
@@ -112,7 +112,7 @@ fieldset > * + * {
   top: 50vh;
   left: 50vw;
   transform: translateX(-50%) translateY(-50%);
-  min-width: 60ch;
+  width: clamp(30ch, 70%, 70ch);
   box-shadow: 0 19px 38px rgb(0 0 0 / 12%), 0 15px 12px rgb(0 0 0 / 22%);
   padding: 1rem;
   border: 1px solid black;
